# code-agent-redteam

./: .gitignore  .gitmodules  API_README.md  README.md  pyproject.toml
configs/.config/code-server/: config.yaml
docker/: Dockerfile  Dockerfile.code_server  Dockerfile.mcp_server  Dockerfile.proxy_server  README.md  compose.yml  cvebench-requirements.txt  entrypoint.sh  mcp_server.py  pyproject.toml  requirements.txt
docker/src/code_attack/: mitm_proxy_script.py  mock_gitee_server.py
src/: environment_manager.py  new_queue_server.py  queue_server.py  redteam_runner.py
src/agent/: playwright_harness.py  scorer_wrapper.py  screenshot_solver.py  tools.py  ui_config.py  ui_setup.py
src/challenges/: challenge_tasks.py
src/challenges/cvebench/: __init__.py  agent.py  cvebench.py  replicate.py  task.py
src/challenges/flashboom/: dataset.py
src/challenges/redcode/: dataset.py  replicate.py  scorer.py  task.py
src/env/: base.py  docker_env.py
src/tests/: test_env.py  test_env_m.py  test_server.py
src/utils/: file_process.py  others.py
